<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="@mipmap/bg_fragment">

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/fanhui" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/icon_title"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="7dp"
        android:text="事项名"
        android:textColor="@color/darkest_gray"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_requirement1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="38dp"
        android:text="@string/s_requirement"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_requirement2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="38dp"
        android:layout_toRightOf="@id/tv_requirement1"
        android:text="@string/s_no_data"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_dept1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_requirement2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/s_dept"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_dept2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_requirement2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/tv_dept1"
        android:text="@string/s_no_data"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_material1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dept2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/s_material"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_material2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dept2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/tv_material1"
        android:text="@string/s_no_data"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_subject1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_material2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/s_subject"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_subject2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_material2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/tv_subject1"
        android:text="@string/s_no_data"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_process1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_subject2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/s_process"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_process2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_subject2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/tv_process1"
        android:text="@string/s_no_data"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_promise1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_process2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/s_promise_term"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_promise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_process2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/tv_promise1"
        android:text="@string/s_no_data"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_legal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_promise2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/s_legal_term"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_legal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_promise2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/tv_legal1"
        android:text="@string/s_no_data"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

</RelativeLayout>